ALF-985 Просмотр версий. При просмотре версий Сотрудника, на вкладке "Персональная информация" два вертикальных скролла. [~] Исправлена ошибка с id в html [-] Удален неиспользуемый скрипт
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2877 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -524,6 +524,7 @@ h4 .lighter
 /* historic-properties-viewer */
 .yui-skin-lecmTheme div.yui-panel.historic-properties-viewer .form-container .form-fields {
     margin-left: -1px;
+    max-height: none;
 }
 .yui-skin-lecmTheme div.yui-panel.historic-properties-viewer .yui-navset .form-container {
     padding: 0;
