--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -566,6 +566,10 @@ h4 .lighter
     padding-left: 3em;
 }
 
+.yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-value {
+    max-width: 450px;
+}
+
 .yui-skin-lecmTheme .yui-panel div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe) {
     max-width: 100%;
     clear: none;
