ALF-1044: Отслеживание ошибок импорта справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2897 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
@@ -40,3 +40,16 @@
     cursor: pointer;
     font-size: 30px;
 }
+
+.import-info-content {
+	margin: 5px 20px;
+	padding-bottom: 5px;
+}
+
+.import-form {
+	margin: 5px 20px;
+}
+
+.import-form li{
+	padding-bottom: 5px;
+}
