ALF-1069 : Съехала верстка стандартного интерфейса "Мои задачи"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2925 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -160,8 +160,21 @@ a:hover {
     padding: 0;
 }
 
-#alf-filters{
+#alf-filters {
 	margin-left: -5px;
+}
+#alf-filters .filter h2 {
+    background-position: 15px 50%;
+    padding-left: 30px !important;
+}
+#alf-filters .filter ul.filterLink li {
+    padding-left: 30px;
+}
+
+/* My-tasks page */
+#alfresco-myworkflows .task-list-toolbar,
+#alfresco-myworkflows .task-list > div {
+    margin-right: 0;
 }
 
 .datalists.tree{
