ALF-1092 : После перехода по гиперссылке в архивных записях в бизнес-журнале, гиперссылка становится черной.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2940 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2209,7 +2209,15 @@ span.person a h3 {
 }
 /* Notifications - end */
 
-.grid .archive-record, .grid .archive-record span a, .grid .archive-record a {
+.grid .archive-record,
+.grid .archive-record span a,
+.grid .archive-record span a:hover,
+.grid .archive-record span a:active,
+.grid .archive-record span a:visited,
+.grid .archive-record a,
+.grid .archive-record a:hover,
+.grid .archive-record a:active,
+.grid .archive-record a:visited {
     color:red;
 }
 
