--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1957,6 +1957,11 @@ div.currentValueDisplay {
     padding: 0;
 }
 
+.yui-skin-lecmTheme .yui-panel div.yui-navset div.form-field div.autocompleteCurrentValueDisplay,
+.yui-skin-lecmTheme .yui-panel div.yui-navset div.form-field div.autocompleteCurrentValueDisplayInvisible {
+    width: 28em;
+}
+
 div.autocompleteCurrentValueDisplayInvisible {
     display: none;
 }
