ALF-1081:Форма сообщения об ошибке импорта справочника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2957 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
@@ -44,6 +44,7 @@
 .import-info-content {
 	margin: 5px 20px;
 	padding-bottom: 5px;
+	word-wrap: break-word;
 }
 
 .import-form {
@@ -52,4 +53,22 @@
 
 .import-form li{
 	padding-bottom: 5px;
+}
+
+.import-error-exception,
+.import-error-stack-trace {
+	margin-top: 5px;
+}
+
+.import-error-more {
+	height: 250px;
+	overflow-y: auto;
+}
+
+.import-error-header {
+	text-align: center;
+}
+
+.import-error-more {
+	display: none;
 }
