[+] ALF-980. Работы по "машине состояний" [~] ALF-1066. Проблема совместимости lecm-statemachine-editor Также функция восстановления машины состояний по умолчанию перенесена в адресную строку (необходимо добавить параметр default)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2967 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
@@ -46,3 +46,8 @@
     padding: 0 10px;
     margin-bottom: 10px;
 }
+
+.datagrid .onVersionRestore a {
+    background-image: url("../../../images/lecm-base/components/base/alf_base_versions_16.png");
+}
+
