--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -1,40 +1,67 @@
-#lecm-menu .statemachine-menu #menu-buttons-status-menu-button span.first-child {
-    background: url('/share/res/images/lecm-statemachine-editor/new_status.png') no-repeat 4px 4px;
-}
-
-#lecm-menu .statemachine-menu #menu-buttons-properties-menu-button span.first-child {
+.statemachine-menu #menu-buttons-properties-menu-button span.first-child {
+    width: 40px;
+    height: 40px;
     background: url('/share/res/images/lecm-statemachine-editor/properties.png') no-repeat 4px 4px;
 }
 
-#lecm-menu .statemachine-menu #menu-buttons-deploy-menu-button span.first-child {
+.statemachine-menu #menu-buttons-deploy-menu-button span.first-child {
+    width: 40px;
+    height: 40px;
 	background: url('/share/res/images/lecm-statemachine-editor/deploy.png') no-repeat 4px 4px;
 }
 
-#lecm-menu .statemachine-menu #menu-buttons-machine-export span.first-child {
+.statemachine-menu #menu-buttons-versions-menu-button span.first-child {
+    width: 40px;
+    height: 40px;
+    background: url('/share/res/images/lecm-statemachine-editor/deploy.png') no-repeat 4px 4px;
+}
+
+.statemachine-menu #menu-buttons-machine-export span.first-child {
 	background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
+    width: 40px;
+    height: 40px;
 }
 
-/*import xml block*/
-.import-xml {
-    position: relative;
+.statemachine-menu #menu-buttons-machine-import span.first-child {
+    background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
+    width: 40px;
+    height: 40px;
 }
 
-.import-xml button {
-    background: url("../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png") no-repeat 17px 8px;
-    cursor: pointer;
-}
-.import-xml {
-    position: relative;
-    overflow: hidden;
-    padding: 0 1px;
-    margin: 0 -1px;
-}
-.import-xml input {
+.statatemachine-import-form {
     position: absolute;
-    right: 0;
-    top: 0;
+    border: 1px solid black;
     opacity: 0;
-    cursor: pointer;
-    font-size: 35px !important;
+    width: 40px;
+    height: 40px;
+    margin: -42px 0 0 508px;
 }
+
+.statatemachine-menu-spin {
+    display: inline-block;
+    width: 300px;
+}
+
+.statatemachine-import-input {
+    width: 40px;
+    height: 40px;
+}
+
+.statemachine-status-title {
+    display: inline-block;
+    width: 60px;
+}
+
+.statemachine-menu #menu-buttons-new-status-menu-button span.first-child {
+    width: 24px;
+    height: 24px;
+    background: url('/share/res/images/lecm-statemachine-editor/new_status_small.png') no-repeat 4px 4px;
+}
+
+.statemachine-menu #menu-buttons-end-event-menu-button span.first-child {
+    width: 24px;
+    height: 24px;
+    background: url('/share/res/images/lecm-statemachine-editor/end_event_small.png') no-repeat 4px 4px;
+}
+
 
