--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2204,13 +2204,9 @@ span.person a h3 {
     line-height: 20px;
     cursor: default;
 }
-#notificationsWindow-next {
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
+#notificationsWindow-loading {
     text-align: center;
-    position: static;
-    bottom: 0;
+	visibility: hidden;
 }
 /* Notifications - end */
 
