[~] ALF-1131. Машина состояний. Дизайн.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3056 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/editor.css
@@ -47,7 +47,7 @@
     margin-bottom: 10px;
 }
 
-.datagrid .onVersionRestore a {
-    background-image: url("../../../images/lecm-base/components/base/alf_base_versions_16.png");
+.datagrid .action-set .onVersionRestore a {
+    background-image: url("/share/res/components/document-details/images/revert-16.png");
 }
 
