ALF-1136 : В IE9 поломаны стили на странице документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3066 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-attachments-list.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-attachments-list.css
@@ -540,7 +540,7 @@ body .attachment-list tr.yui-dt-highlighted
 {
 	background-color: #DCEAF4;
 	color: #4F94C9;
-	padding: 0.1em, 0.3em;
+	padding: 0.1em 0.3em;
 	margin-right: 0.5em;
 }
 
