--- a/lecm-documents/share/src/main/webapp/css/components/document-tags.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-tags.css
@@ -28,7 +28,7 @@
 .inlineTagReadOnly {
     background-color: #DCEAF4;
     color: #4F94C9;
-    padding: 0.1em, 0.3em;
+    padding: 0.1em 0.3em;
     margin-right: 0.5em;
 }
 
