--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -576,11 +576,11 @@ h4 .lighter
     clear: none;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding-left: 3em;
+    padding-left: 1em;
 }
 
 .yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-value {
-    max-width: 450px;
+    max-width: 440px;
 }
 
 .yui-skin-lecmTheme .yui-panel div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe) {
@@ -1941,8 +1941,12 @@ div.current-values,
 .yui-skin-lecmTheme div.form-field div.yui-ac .autocomplete-input {
     float: left;
 }
-#lecm-package-items-span div.current-values
-{
+
+.yui-skin-lecmTheme .yui-panel .form-container .viewmode-field .current-values div {
+    padding: 0;
+}
+
+#lecm-package-items-span div.current-values {
     float: none;
     width: 100%;
 }
@@ -1979,7 +1983,6 @@ div.association-auto-complete-selected-item-even {
     line-height: 22px;
     white-space: normal;
     border-bottom: 1px solid #ccc;
-    padding: 3px 5px;
 }
 div.association-auto-complete-selected-item > span > a,
 div.association-auto-complete-selected-item-even > span > a,
