--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -19,3 +19,33 @@ report-editor-sourcesList #alf-filters .toolbar.datalist-toolbar .header-bar {
 report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
     cursor: pointer;
 }
+
+.datagrid .onActionSelect a {
+    background-image: url("../../images/lecm-base/components/base/alf_base_osnovnaya_16.png");
+}
+
+.reports-editor-panel {
+    border-bottom: 1px solid #D9D9D9;
+    margin: 0 -10px;
+    padding: 4px 0.5em 2px;
+}
+
+#re-templates-grid #yui-main-2 {
+    width: 60%;
+    float: left;
+    margin-left: 15%;
+}
+
+.reports .flat-button .yuimenuitemlabel {
+    background-position: 2px 50%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    display: block;
+    min-height: 16px;
+    background-image: url("/share/res/images/lecm-reports-editor/select-template-16.png");
+}
+
+.title h3 {
+    font-weight: bold;
+    margin: 5px 0;
+}
