ALF-1116 Настройка типа и шаблона (доработки)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3085 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -30,7 +30,7 @@ report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
     padding: 4px 0.5em 2px;
 }
 
-#re-templates-grid #yui-main-2 {
+#re-templates-grid{
     width: 90%;
     float: left;
     margin-left: 0%;
