--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1983,6 +1983,7 @@ div.association-auto-complete-selected-item-even {
     line-height: 22px;
     white-space: normal;
     border-bottom: 1px solid #ccc;
+    padding: 3px 5px;
 }
 div.association-auto-complete-selected-item > span > a,
 div.association-auto-complete-selected-item-even > span > a,
