--- a/lecm-contracts/repo/src/main/config/reportdefinitions/contracts-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/contracts-list.jrxml
@@ -211,79 +211,88 @@
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
 			<frame>
 				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="1" y="1" width="797" height="24" backcolor="#FFFFFF"/>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" stretchType="RelativeToBandHeight" x="197" y="2" width="110" height="20"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_DocKind}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="107" y="2" width="88" height="20"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_numContragent}+ " "+ $F{col_Contragent.name}+ " "+ $F{col_Contragent.phone}]]></textFieldExpression>
-				</textField>
-				<textField pattern="" isBlankWhenNull="true">
-					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="2" y="2" width="30" height="20" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="35" y="2" width="70" height="20"/>
-					<textElement textAlignment="Right" markup="none">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[( ($F{col_Regnum} != null && !"Не присвоено".equals($F{col_Regnum}) )? $F{col_Regnum} : "нет")]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" stretchType="RelativeToBandHeight" x="309" y="2" width="148" height="20"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[( ($F{col_Theme.tname} != null) ? $F{col_Theme.tname} : "Code "+ $F{col_Theme.code} )]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
-					<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" stretchType="RelativeToTallestObject" x="459" y="2" width="68" height="20" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_DateStart}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
-					<reportElement uuid="7fe3fbca-e8e2-431c-b0d1-35a9f6eba3e9" stretchType="RelativeToTallestObject" x="529" y="2" width="68" height="20" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_DateEnd}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" x="604" y="2" width="80" height="20"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Executor_Family}+ " "+ ($F{col_Executor_Name}+ " ").substring( 0, 1 )+ "."+ ($F{col_Executor_Otchestvo}+ " ").substring(0,1)]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" x="690" y="2" width="107" height="20" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Status}]]></textFieldExpression>
-				</textField>
 			</frame>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="200" y="0" width="108" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_DocKind}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="107" y="0" width="88" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( $F{col_Contragent.name} == null ? "" : $F{col_Contragent.name})
++ ( ($F{col_Contragent.phone} == null)
+	|| ((" "+$F{col_Contragent.phone}).trim().length() == 0)
+	? ""
+	: ", тел. " + $F{col_Contragent.phone})]]></textFieldExpression>
+			</textField>
+			<textField pattern="" isBlankWhenNull="true">
+				<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="0" y="0" width="30" height="20" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="35" y="0" width="70" height="20"/>
+				<textElement textAlignment="Right" markup="none">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( ($F{col_Regnum} != null && !"Не присвоено".equals($F{col_Regnum}) )? $F{col_Regnum} : "нет")]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" x="310" y="0" width="148" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( ($F{col_Theme.tname} != null)
+		? $F{col_Theme.tname}
+		: ($F{col_Theme.code} != null ? "Code "+ $F{col_Theme.code} : "")
+)]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" x="460" y="0" width="68" height="20" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_DateStart}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement uuid="7fe3fbca-e8e2-431c-b0d1-35a9f6eba3e9" x="530" y="0" width="68" height="20" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_DateEnd}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" x="602" y="0" width="80" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[($F{col_Executor_Family} == null ? "" : $F{col_Executor_Family})
++ ( $F{col_Executor_Name} == null ? "" : " "+ ($F{col_Executor_Name}+ " ").substring( 0, 1 )+ ".")
++ ( $F{col_Executor_Otchestvo} == null ? "" : ($F{col_Executor_Otchestvo}+ " ").substring(0,1) + ".")]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" x="690" y="0" width="107" height="20" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Center">
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="Single" spacingBefore="2" spacingAfter="2" tabStopWidth="20"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Status}]]></textFieldExpression>
+			</textField>
 			<line>
 				<reportElement uuid="d905283e-8430-40da-a9e5-2d1ce6418c36" stretchType="RelativeToBandHeight" x="1" y="0" width="1" height="24"/>
 			</line>
