--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/menu.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/menu.css
@@ -1,5 +1,9 @@
 #lecm-menu #menu-buttons #menu-buttons-reportsListBtn span.first-child {
-    background: url("/share/res/images/lecm-dictionary/dictionary_32.png") no-repeat scroll 4px 4px;
+    background: url('/share/res/images/lecm-orgstructure/icons_alfresco_top-menu-24.png') no-repeat scroll 4px 4px;
+}
+
+#lecm-menu #menu-buttons #menu-buttons-reportSettingsBtn span.first-child {
+    background: url('/share/res/images/lecm-orgstructure/icons_alfresco_top-menu-24.png') no-repeat scroll 4px 4px;
 }
 
 #lecm-menu #menu-buttons #menu-buttons-addDataSourceBtn span.first-child {
