[ALF-1197] С выводом сумм не повторяется. Поправлен вывод валюты (выводилась как часть локали, а не заданного реально значения)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3139 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/contract-dossier.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/contract-dossier.jrxml
@@ -198,7 +198,7 @@
 					<textElement>
 						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[( ($F{col_Sum} == null) ? "???" : msg("{0,number,currency}", $F{col_Sum}) )
+					<textFieldExpression><![CDATA[( ($F{col_Sum} == null) ? "???" : msg("{0,number}", $F{col_Sum}) )
 + " "+ (($F{col_SumUnits} == null) ? "" : $F{col_SumUnits})]]></textFieldExpression>
 				</textField>
 				<textField>
