[~]доработки по стилм для навигационного тулбара [+] добавлена заготовка страницы reports-list
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3146 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -69,3 +69,11 @@ report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
 .datagrid .onActionAdd a {
     background-image: url('/share/res/components/images/plus-16.png');
 }
+
+#bd #lecm-content-main div[id*="reports-editor-toolbar"] {
+    margin:0;
+}
+
+#bd #lecm-content-main div[id*="reports-editor-navigation-toolbar"] .left{
+    float:right;
+}
