высота не фиксированная
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3148 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/yui/assets/skin.css
@@ -1186,7 +1186,7 @@ z-index: 9000;
     white-space: nowrap;
 }
 .yui-skin-lecmTheme .yui-dt-liner {
-    height: 17px;
+    /*height: 17px;*/
     -moz-box-sizing: content-box;
     box-sizing: content-box;
     margin: 0;
