[~] стили тулбаров в Редакторе Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3151 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -70,10 +70,20 @@ report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
     background-image: url('/share/res/components/images/plus-16.png');
 }
 
-#bd #lecm-content-main div[id*="reports-editor-toolbar"] {
+#bd #lecm-content-main div[id*="reports-editor-toolbar"], #bd #lecm-content-main div[id*="template-edit"], #bd #lecm-content-main div[id*="source-edit"]{
     margin:0;
 }
 
 #bd #lecm-content-main div[id*="reports-editor-navigation-toolbar"] .left{
     float:right;
+}
+
+#bd #lecm-content-main div[id*="reports-editor"] .reports {
+    margin: 5px;
+}
+
+div[id*="reports-editor-navigation-toolbar"] .toolbar
+{
+    background-color: #F9F9F9;
+    border-bottom: 0px solid #E3E3E3;
 }
