--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -52,14 +52,13 @@ report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
 
 .sources-left-grid {
     float: right;
-    width: 100%;
-    margin-left: -25em;
+    width: 95%;
 }
 
 .columns-right-grid {
     width: 100%;
     float: right;
-    margin-left: -100%;
+    margin-right: 2%;
 }
 
 .datagrid .onActionRemove a {
