[ALF-1146] Отчёты - сервисная часть, генерация описания метаданных ds-xml [ALF-1148] Отчёты - сервисная часть, загрузка метаописания отчёта из Альфрески здесь ещё надо добавить часть для загрузки dsxml на стороне "lecm-reports-editor" [ALF-1149] Отчёты - сервисная часть, deploy отчёта
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3202 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
@@ -27,7 +27,7 @@
 		<defaultValueExpression><![CDATA["select * from lecm-al:approval-list as approvals"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_XMLCONFIG" class="java.lang.String">
-		<defaultValueExpression><![CDATA["ds-approval.xml"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["ds-approval-discipline.xml"]]></defaultValueExpression>
 	</parameter>
 	<queryString language="SQL">
 		<![CDATA[select * from cm:documents]]>
