--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
@@ -27,7 +27,7 @@
 		<defaultValueExpression><![CDATA["select * from lecm-al:approval-list as approvals"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_XMLCONFIG" class="java.lang.String">
-		<defaultValueExpression><![CDATA["ds-approval-byid.xml"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["ds-approval-list-byid.xml"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[select * from cm:documents]]>
