--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/add-docs-filter.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/add-docs-filter.css
@@ -7,6 +7,8 @@ h2.thin {
     background-color: #F2F2F2;
     border: 1px solid #cbcbcb;
     margin-right: -15px;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 0;
 }
 
 .status-button {
@@ -26,18 +28,11 @@ h2.thin {
     position: relative;
 }
 
-.contracts-filter-panel .filterBlock {
-    padding-left: 16px;
-    margin: 0;
-}
-
 .contracts-filter-panel a:hover {
     text-decoration: underline;
 }
 
 .contracts-filters-block {
-    margin: 0 15px;
-    padding: 5px;
     position: relative;
 }
 
@@ -46,20 +41,25 @@ h2.thin {
 }
 
 .total-tasks-count-right {
-    width: 19px;
+    color: #F08020;
+    font-size: 13px;
+    font-weight: bold;
     height: 19px;
     line-height: 19px;
-    background: #969696;
     position: absolute;
-    right: 0;
-    top: 0;
-    text-align: center;
-    vertical-align: middle;
-    color: #fff;
+    right: 20px;
+    top: 4px;
+}
+
+.contracts-filter-panel .filterBlock > div.selected {
+    background: #bbe6f3;
     font-weight: bold;
-    font-size: 13px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
+}
+
+/*.contracts-filter-panel > div {
+    padding: 4px 0 0 30px;
+}*/
+
+.contracts-filter-panel .filterBlock > div {
+    padding: 4px 0 0 30px;
 }
